Colab을 통해 생성됨

--- a/MBTI(Myers_Briggs_Type_Indicator).ipynb
+++ b/MBTI(Myers_Briggs_Type_Indicator).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpgaIKHlcDCc4ms2VFTOqg",
+      "authorship_tag": "ABX9TyPk/Asrpfjc1juGAERZ2Fgm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Content\n",
+        "\n",
+        "This dataset contains over 8600 rows of data, on each row is a person’s:\n",
+        "\n",
+        "Type (This persons 4 letter MBTI code/type)\n",
+        "A section of each of the last 50 things they have posted (Each entry separated by \"|||\" (3 pipe characters))\n",
+        "\n",
+        "###Acknowledgements\n",
+        "\n",
+        "This data was collected through the PersonalityCafe forum, as it provides a large selection of people and their MBTI personality type, as well as what they have written."
+      ],
+      "metadata": {
+        "id": "mPyz-umcfD8c"
+      }
     },
     {
       "cell_type": "code",
